# screen2world-k

./: .gitignore  .x  CMakeLists.txt  README.md  app  app.cpp  locator.cpp  rotation_translation_matrix.yaml  screen2worldK.cpp  screen2worldK.h  simple.cpp
test/: camera_matrix_1280x720.yaml  points_matrix.yaml
